src/test/deca/syntax/invalid/decaObjet/cast/00missingOParentType.deca
// Description:
// Test d'un cast avec la parenthèse ouvrante manquante pour le type du cast 
//
// Resultats:
//  00missingOParentType.deca:18:15:
//
// Historique:
//    crée le 16/06/2022
class Point2D {     
    int x; // Abscisse     
    int y; // Ordonnee      
} 
class Point3D extends Point2D {     
    int z; // Hauteur      
}  
{             
    Point3D p = null;         
    p = Point2D) (p);     
}